# ROBOTIS-THORMANG-MPC

thormang3_head_control_module/include/thormang3_head_control_module/: head_control_module.h
thormang3_kinematics_dynamics/src/: kinematics_dynamics.cpp  kinematics_dynamicsV1.cpp
thormang3_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_manager/config/: THORMANG3_NDAJ.robot  dxl_init_ndaj.orig.yaml  dxl_init_ndaj.yaml  ft_calibration_data.yaml  ft_data.yaml  offset.orig.yaml  offset.yaml
thormang3_manager/launch/: .thormang3_ndaj_manager.launch.swp  thormang3_ndaj_manager.launch  thormang3_ndaj_manager_gazebo.launch  thormang3_ndaj_manager_tmp.launch
thormang3_manager/src/: thormang3_ndaj_manager.cpp
thormang3_manipulation_module/src/: manipulation_module.cpp
thormang3_rmc_module/: CMakeLists.txt  package.xml  package.xml~
thormang3_rmc_module/src/: rmc_module.allEEConst  rmc_module.cpp  rmc_module.cpp~  rmc_module.old  rmc_module.pos  rmc_moduleV1.cpp
thormang3_teleop_module/: CMakeLists.txt  CMakeLists.txt~
thormang3_teleop_module/src/: teleop_module.cpp  teleop_module.cpp~
thormang3_test_module/: package.xml
thormang3_test_module/src/: test_module.cpp  test_module.cpp~
thormang3_walking_module/config/: balance_offset.yaml
thormang3_wheel_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_wheel_module/data/: wheel_pose.yaml  wheel_to_init_pose.yaml
thormang3_wheel_module/include/thormang3_wheel_module/: wheel_module.h  wheel_module_state.h
thormang3_wheel_module/src/: wheel_module.cpp  wheel_module_state.cpp
(+9 files in other folders)
